<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BT Button KeyboardLayouts</string>
    <string name="VolumeUpAndDown">Volume up and down.</string>
    <string name="MediaNextAndPrevious">Media next and previous.</string>
	<string name="VoiceAssistAndEnter">VoiceAssist and Enter</string>
	<string name="CallAndHeadsetHook">Call and headset hook</string>
	<string name="EndcallAndHeadsetHook">Endcall and headset hook</string>
	<string name="keyboard_layouts_label">Define. Button!</string>
</resources>
