<?xml version="1.0" encoding="utf-8"?>
 <keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="VolumeUpAndDown"
            android:label="@string/VolumeUpAndDown"
            android:keyboardLayout="@raw/volume_up_and_down" />
    <keyboard-layout android:name="MediaNextAndPrevious"
            android:label="@string/MediaNextAndPrevious"
            android:keyboardLayout="@raw/media_next_and_previous" />
    <keyboard-layout android:name="VoiceAssistAndEnter"
            android:label="@string/VoiceAssistAndEnter"
            android:keyboardLayout="@raw/voice_assist_and_enter" />
    <keyboard-layout android:name="CallAndHeadsetHook"
            android:label="@string/CallAndHeadsetHook"
            android:keyboardLayout="@raw/call_and_headset_hook" />
    <keyboard-layout android:name="EndcallAndHeadsetHook"
            android:label="@string/EndcallAndHeadsetHook"
            android:keyboardLayout="@raw/endcall_and_headset_hook" />
</keyboard-layouts>